fix: fjern position sticky fra th
Vi har ingen bakgrunnsfarge på headeren, så den overlapper innholdet og blir uleselig.

Fra diskusjonene om tabeller ser det ut som de færreste egentlig trenger sticky headers,
og de som trenger det må uansett ha satt en bakgrunnsfarge selv for at den skal bli
brukbar. De som trenger den sticky kan legge på position: sticky selv.

Tips: `thead` kan `position: sticky` nå som vi ikke lenger støtter IE.

ISSUES CLOSED: #2965

--- a/packages/table/_table-header.scss
+++ b/packages/table/_table-header.scss
@@ -7,10 +7,6 @@
     padding-left: jkl.$spacing-xs;
     padding-right: jkl.$spacing-xs;
     padding-bottom: jkl.$spacing-xs - jkl.rem(1px);
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    background-color: inherit;
 
     &--align-right {
         text-align: right;
